KIX2018-5691 fixed z-index

--- a/src/frontend-applications/agent-portal/modules/agent-portal/webapp/application/_base-template/style.less
+++ b/src/frontend-applications/agent-portal/modules/agent-portal/webapp/application/_base-template/style.less
@@ -53,6 +53,7 @@
     >.sidebar-left-wrapper,
     >.sidebar-right-wrapper {
         position: relative;
+        z-index: 100;
     }
 
     >.main-menu-wrapper,
